--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "aws/aws-sdk-php": "^3.269",
         "fideloper/proxy": "^4.2",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^9.0",
         "kreait/laravel-firebase": "^4.1",
         "laravel-notification-channels/fcm": "~2.0",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
